--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -15,18 +15,20 @@
         <h2>main</h2>
         <div class="contents" data-contents="main">
 <table class="def">[error]</table>
-<style>
-.psdrb_html_generator .img_link{opacity:0; background:rgba(204,204,204,0.7);}
-</style>
-<div class="psdrb_html_generator" style="position:relative;margin:0;padding:0;max-width:100px;">
-<img src="./index_files/resources/69573a9fe68581d548dc67555b9b6503.png" alt="">
-
-</div>
-
-
         </div><!-- /main -->
         <h2>secondly</h2>
         <div class="contents" data-contents="secondly">
+
+<style>
+.psdrb_html_generator .img_link{opacity:0; background:rgba(204,204,204,0.7);}
+</style>
+<div class="psdrb_html_generator" style="position:relative;margin:0;padding:0;max-width:900px;">
+<img src="./index_files/resources/259ebd369c43e974e1876e39b11eead3.png" alt="">
+<a href="http://yahoo.co.jp" class="img_link" style="display:block; position:absolute; top:58.166%; left:70.444%; width:27.888%; height:38.666%;"></a>
+<a href="http://google.co.jp" class="img_link" style="display:block; position:absolute; top:28.999%; left:36.555%; width:27.888%; height:38.666%;"></a>
+
+</div>
+
 
         </div><!-- /secondly -->
     </body>
